--- a/reflections/reflection_style2.css
+++ b/reflections/reflection_style2.css
@@ -24,13 +24,11 @@ body {
 	display: grid;
 	grid-template-columns: 0.5fr 0.5fr; 
 	grid-template-rows: 0.5fr 0.5fr; 
-	gap: 0px 250px; 
 	grid-template-areas: 
     "one two" 
     "three four"; 
     min-width: 1250px;
     min-height: 700px;
-    /*max-height: 1500px;*/
 }
 
 .reflection-container {
@@ -111,4 +109,16 @@ body {
 	width: 200px;
 	background-size: 150%;
 	top: 20px;
+}
+
+.plinth-left {
+	transform: rotate(90deg);
+	left: 0;
+	bottom: -20px;
+}
+
+.plinth-right {
+	transform: rotate(-90deg);
+	right: 0;
+	bottom: -20px;
 }
