--- a/reflections/reflection_style3.css
+++ b/reflections/reflection_style3.css
@@ -1,7 +1,3 @@
-/*html {
-  height: 100%;
-}*/
-
 body {
 	min-height: 450px;
 	margin: 0px;
@@ -27,7 +23,6 @@ body {
     "one two three four"; 
     min-width: 1250px;
     min-height: 710px;
-    /*max-height: 1500px;*/
 }
 .reflection-container {
 	position: relative;
@@ -42,7 +37,6 @@ body {
 
 .frame {
 	position: absolute;
-    /*height: 400px;*/
     bottom: 40px;
     height: 40vh;
     width: 20vw;
@@ -53,47 +47,36 @@ body {
 
 #frame1 {
 	background-image: url('reflection/r3_frame1_left.png');
-	/*top: 390px;*/
 	bottom: 40px;
 	left: 10px;
 }
 
 #frame4 {
 	background-image: url('reflection/r3_frame1_right.png');
-	/*top: 390px;*/
 	bottom: 40px;
 	right: 10px;
 }
 
 #frame2 {
 	background-image: url('reflection/r3_frame2_left.png');
-	/*top: 420px;*/
 	bottom: 40px;
 	right: 40px;
 }
 
 #frame3 {
 	background-image: url('reflection/r3_frame2_right.png');
-	/*top: 420px;*/
 	bottom: 40px;
 	left: 40px;
 }
 
-#previous {
-	background-image: url('reflection/arrow_left.png');
+.plinth-left {
+	transform: rotate(180deg);
+	left: 0;
+	top: 50px;
 }
 
-#next {
-	background-image: url('reflection/arrow_right.png');
-}
-
-.arrow {
-	position: absolute;
-  	background-repeat: no-repeat;
-	background-position: center;
-	justify-content: center;
-	height: 130px;
-	width: 200px;
-	background-size: 150%;
-	top: 100px;
+.plinth-right {
+	transform: rotate(180deg);
+	right: 0;
+	top: 50px;
 }
