add plinth to reflection4

--- a/reflections/reflection_style4.css
+++ b/reflections/reflection_style4.css
@@ -92,5 +92,17 @@ body {
 .ig-room-link.ig-next-room {
 	position: absolute;
 	right: 10px;
-	top: -25px;
+	bottom: 90px;
+}
+
+.plinth-left {
+	transform: rotate(90deg);
+	left: 30px;
+	bottom: -70px;
+}
+
+.plinth-right {
+	transform: rotate(-90deg);
+	right: 30px;
+	bottom: -70px;
 }
