fix arrow not being at the bottom on reflection1

--- a/reflections/reflection_style1.css
+++ b/reflections/reflection_style1.css
@@ -79,10 +79,14 @@ a {
 
 .plinth-left {
 	right: -70px;
-	bottom: -10px;
+	bottom: 20px;
 }
 
 .plinth-right {
 	left: -70px;
-	bottom: -10px;
+	bottom: 20px;
+}
+
+.ig-room-link {
+	position: absolute;
 }
